--- a/angular.json
+++ b/angular.json
@@ -121,6 +121,46 @@
           }
         }
       }
+    },
+    "@drmueller/ng-data-access": {
+      "root": "projects/drmueller/ng-data-access",
+      "sourceRoot": "projects/drmueller/ng-data-access/src",
+      "projectType": "library",
+      "prefix": "drm",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/drmueller/ng-data-access/tsconfig.lib.json",
+            "project": "projects/drmueller/ng-data-access/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project": "projects/drmueller/ng-data-access/ng-package.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/drmueller/ng-data-access/src/test.ts",
+            "tsConfig": "projects/drmueller/ng-data-access/tsconfig.spec.json",
+            "karmaConfig": "projects/drmueller/ng-data-access/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/drmueller/ng-data-access/tsconfig.lib.json",
+              "projects/drmueller/ng-data-access/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "ng-data-access-demo"
