--- a/package.json
+++ b/package.json
@@ -13,32 +13,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.7",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
-    "@drmueller/language-extensions": "^1.0.34",
-    "@drmueller/ng-base-services": "^1.0.9",
+    "@angular/animations": "~7.1.0",
+    "@angular/cdk": "~7.1.0",
+    "@angular/common": "~7.1.0",
+    "@angular/compiler": "~7.1.0",
+    "@angular/core": "~7.1.0",
+    "@angular/forms": "~7.1.0",
+    "@angular/http": "~7.1.0",
+    "@angular/material": "~7.1.0",
+    "@angular/platform-browser": "~7.1.0",
+    "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/router": "~7.1.0",
+    "@drmueller/language-extensions": "^2.1.10",
+    "@drmueller/ng-base-services": "^2.1.13",
+    "angular-in-memory-web-api": "^0.8.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/compiler-cli": "~7.1.0",
+    "@angular-devkit/build-ng-packagr": "0.11.3",
+    "@angular-devkit/build-angular": "0.11.3",
     "ng-packagr": "^3.0.0-rc.2",
     "tsickle": ">=0.25.5",
     "tslib": "^1.7.1",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.8",
+    "@angular/cli": "~7.1.0",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -53,6 +53,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~3.1.6"
   }
 }
