--- a/angular.json
+++ b/angular.json
@@ -140,7 +140,7 @@
             }
           }
         },
-        "test": {
+        "unit-test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "projects/drmueller/ng-data-access/src/test.ts",
